--- a/src/web/WebUI/Components/Pages/Contatos.razor
+++ b/src/web/WebUI/Components/Pages/Contatos.razor
@@ -1,52 +1,66 @@
 ﻿@page "/contatos"
-@inject HttpClient Http
-@attribute [StreamRendering]
+@using WebUI.Models
+@using WebUI.Services
+@inject NavigationManager NavigationManager
+@inject ContatosService ContatosService
+@rendermode InteractiveServer
+
 
 <PageTitle>Contatos</PageTitle>
 
 <h1>Contatos</h1>
 
+<div class="d-flex justify-content-end mb-3">
+    <a class="btn btn-primary" href="/adicionar-contato">Novo Contato</a>
+</div>
 <table class="table">
     <thead>
         <tr>
+            <th>Id</th>
             <th>Nome</th>
             <th>Telefone</th>
             <th>Email</th>
             <th>DDD</th>
+            <th>Ações</th>
         </tr>
     </thead>
     <tbody>
         @foreach (var contato in contatosList)
         {
             <tr>
+                <td>@contato.Id</td>
                 <td>@contato.Nome</td>
                 <td>@contato.Telefone</td>
                 <td>@contato.Email</td>
                 <td>@contato.DDD</td>
+                <td>
+                    <button class="btn btn-primary">Editar</button>
+                    <button class="btn btn-danger" @onclick="() => ExcluirContato(contato)">Excluir</button>
+                </td>
             </tr>
         }
     </tbody>
 </table>
 
 @code {
-    List<Contact> contatosList = new List<Contact>();
+    List<ContatoModel> contatosList = new List<ContatoModel>();
 
     protected override async Task OnInitializedAsync()
     {
-        await GetContatos();
+        contatosList = await ContatosService.GetContatosAsync();
     }
 
-    async Task GetContatos()
-    {
-        contatosList = await Http.GetFromJsonAsync<List<Contact>>("https://localhost:44336/api/contatos/11");
-    }
+    // private void EditarContato(ContatoModel contato)
+    // {
+    //     // Implemente a lógica para redirecionar para a página de edição do contato
+    //     NavigationManager.NavigateTo($"/editar-contato/{contato.Id}");
+    // }
 
-    public class Contact
+    private async Task ExcluirContato(ContatoModel contato)
     {
-        public int Id { get; set; }
-        public string Nome { get; set; }
-        public string Telefone { get; set; }
-        public string Email { get; set; }
-        public int DDD { get; set; }
+        bool sucesso = await ContatosService.ExcluirContatoAsync(contato.Id);
+
+        contatosList = await ContatosService.GetContatosAsync();
+
     }
 }
