--- a/src/web/WebUI/Components/Pages/NovoContato.razor
+++ b/src/web/WebUI/Components/Pages/NovoContato.razor
@@ -7,29 +7,33 @@
 
 <PageTitle>Adicionar Novo Contato</PageTitle>
 
-<h1>Adicionar Novo Contato</h1>
+<h1 class="text-center">Adicionar Novo Contato</h1>
 
-<div class="row">
-    <div class="col-md-6">
-        <form>
-            <div class="form-group">
-                <label for="nome">Nome:</label>
-                <input type="text" class="form-control" id="nome" @bind="novoContato.Nome">
-            </div>
-            <div class="form-group">
-                <label for="telefone">Telefone:</label>
-                <input type="text" class="form-control" id="telefone" @bind="novoContato.Telefone">
-            </div>
-            <div class="form-group">
-                <label for="email">Email:</label>
-                <input type="email" class="form-control" id="email" @bind="novoContato.Email">
-            </div>
-            <div class="form-group">
-                <label for="ddd">DDD:</label>
-                <input type="text" class="form-control" id="ddd" @bind="novoContato.DDD">
-            </div>
-            <button type="button" class="btn btn-primary" @onclick="AdicionarContato">Salvar</button>
-        </form>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <form>
+                <div class="form-group">
+                    <label for="nome">Nome:</label>
+                    <input type="text" class="form-control" id="nome" @bind="novoContato.Nome">
+                </div>
+                <div class="form-group">
+                    <label for="telefone">Telefone:</label>
+                    <input type="text" class="form-control" id="telefone" @bind="novoContato.Telefone">
+                </div>
+                <div class="form-group">
+                    <label for="email">Email:</label>
+                    <input type="email" class="form-control" id="email" @bind="novoContato.Email">
+                </div>
+                <div class="form-group">
+                    <label for="ddd">DDD:</label>
+                    <input type="text" class="form-control" id="ddd" @bind="novoContato.DDD">
+                </div>
+                <div class="form-group text-center">
+                    <button type="button" class="btn btn-primary mt-3" @onclick="AdicionarContato">Salvar</button>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
 
@@ -47,5 +51,3 @@
         }
     }
 }
-
-
