--- a/src/web/WebUIAgenda/Pages/Home.razor
+++ b/src/web/WebUIAgenda/Pages/Home.razor
@@ -1,7 +1,43 @@
-﻿@page "/"
+@page "/"
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1 class="text-center">Grupo 22 - Integrantes</h1>
 
-Welcome to your new app.
+<div class="container">
+    <div class="card">
+        <img src="images/img1.jpg" alt="Photo 1" class="round-image" />
+        <div class="info">
+            <p>Nome: Carlos</p>
+            <p>RM: 356216</p>
+        </div>
+    </div>
+    <div class="card">
+        <img src="images/img5.jpg" alt="Photo 2" class="round-image" />
+        <div class="info">
+            <p>Nome: Gustavo</p>
+            <p>RM: 354364</p>
+        </div>
+    </div>
+    <div class="card">
+        <img src="images/img2.jpg" alt="Photo 3" class="round-image" />
+        <div class="info">
+            <p>Nome: Rafael</p>
+            <p>RM: 353203</p>
+        </div>
+    </div>
+    <div class="card">
+        <img src="images/img3.jpg" alt="Photo 4" class="round-image" />
+        <div class="info">
+            <p>Nome: Sabrina</p>
+            <p>RM: 354805</p>
+        </div>
+    </div>
+    <div class="card">
+        <img src="images/img4.jpg" alt="Photo 5" class="round-image" />
+        <div class="info">
+            <p>Nome: Vinicius</p>
+            <p>RM: 355605</p>
+        </div>
+    </div>
+</div>
