--- a/src/web/WebUIAgenda/wwwroot/css/app.css
+++ b/src/web/WebUIAgenda/wwwroot/css/app.css
@@ -101,3 +101,38 @@ a, .btn-link {
 code {
     color: #c02d76;
 }
+
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+}
+
+.card {
+    width: 200px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 20px;
+    text-align: center;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.round-image {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.info {
+    margin-top: 10px;
+    text-align: center;
+}
+
+    .info p {
+        margin: 5px 0;
+    }
