--- a/src/Web/Agenda.WebUI/Layout/NavMenu.razor
+++ b/src/Web/Agenda.WebUI/Layout/NavMenu.razor
@@ -19,6 +19,11 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Contatos
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="eventos">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Eventos
+            </NavLink>
+        </div>
     </nav>
 </div>
 
